--- a/static/Style.css
+++ b/static/Style.css
@@ -305,8 +305,9 @@ img { transition: opacity .35s linear; }
 }
 
 #chess-visualization {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 200px auto 200px;
+  grid-template-rows: auto auto;
   align-items: center;
   gap: 24px;
 }
@@ -317,34 +318,34 @@ img { transition: opacity .35s linear; }
   color: var(--accent);
 }
 
-.metrics {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  gap: 30px;
-  align-items: center;
-}
 
-.metric {
-  background: var(--card-bg);
-  padding: 16px;
-  border-radius: 12px;
-  text-align: center;
-  font-size: 0.9rem;
-}
 
 #board {
   width: 320px;
 }
 
 /* === CHESS BOARD IMAGE === */
+.metrics.vertical {
+  grid-column: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+}
+
 #boardImage {
-  width: 320px;        /* taille raisonnable */
-  max-width: 90vw;     /* responsive mobile */
-  height: auto;
-  border-radius: 12px;
-  box-shadow: 
-    0 6px 18px rgba(0, 0, 0, 0.15);
-  background: white;
+  grid-column: 2;
+  justify-self: center;
+}
+
+.black-player {
+  grid-column: 3;
+  align-self: start;
+}
+
+.white-player {
+  grid-column: 3;
+  align-self: end;
 }
 
 .player {
@@ -361,18 +362,3 @@ img { transition: opacity .35s linear; }
   color: #1c1c1c;
 }
 
-
-.metrics.vertical {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  align-items: center;
-}
-
-.metric {
-  background: #f4f4f4;
-  padding: 0.8rem 1.2rem;
-  border-radius: 8px;
-  min-width: 180px;
-  text-align: center;
-}
