--- a/templates/FinalProjectData.html
+++ b/templates/FinalProjectData.html
@@ -1,3 +1,7 @@
+
+<!-- Data -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,18 +11,23 @@
   <title>Predict the time spend for a move in chess</title>
   <link rel="shortcut icon" href="{{ url_for('static', filename='./media/logo-chess-project.png') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='Style.css') }}">
+  <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
 
   <!-- D3.js -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="{{ url_for('static', filename='structure.js') }}" defer></script>
 </head>
 
-<body>
+<body class="project-page">
 
-  
+
+<!-- ================= INTRO ================= -->
+
 <section class="intro-section">
 <div class="intro-content animate__animated animate__fadeIn">
-<img src="{{ url_for('static', filename='media/motif_site_Project.png') }}" alt="Decorative motif" class="intro-motif animate__animated animate__zoomIn">
+<img src="{{ url_for('static', filename='media/chess-logo-start.png') }}" alt="Decorative motif" class="intro-motif animate__animated animate__zoomIn">
 <h1 class="intro-title">Data</h1>
 </div>
 </section>
@@ -84,15 +93,8 @@ compatibility with human-like and interactive systems.
       <p>This histogram shows the distribution of the variable <strong>TimeSpend</strong> in the dataset.</p>
       <div id="timeSpendChart"></div>
     </section>
-  </main>
 
-  <section class="final-section">
-    <div class="intro-content animate__animated animate__fadeIn">
-      <img id="finalImage" src="{{ url_for('static', filename='media/final-motif.png') }}" alt="Decorative motif" class="intro-motif animate__animated animate__zoomIn">
-    </div>
-  </section>
-
-
+    
 
 <section class="card">
 <h3>Data Availability & Reproducibility</h3>
@@ -114,6 +116,9 @@ To ensure long-term accessibility, large files are hosted on Zenodo.
   </li>
 </ul>
 </section>
+
+  </main>
+
 
 
 
