--- a/templates/FinalProjectHome.html
+++ b/templates/FinalProjectHome.html
@@ -1,5 +1,5 @@
 
-
+<!-- Home  -->
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
@@ -13,18 +13,16 @@
 </head>
 
 
-<body>
+<body class="project-page">
 
+<!-- ================= INTRO ================= -->
 <section class="intro-section">
 <div class="intro-content animate__animated animate__fadeIn">
-<img src="{{ url_for('static', filename='media/motif_site_AboutMe.png') }}" alt="Decorative motif" class="intro-motif animate__animated animate__zoomIn">
+<img src="{{ url_for('static', filename='media/chess-logo-start.png') }}" alt="Decorative motif" class="intro-motif animate__animated animate__zoomIn">
 <h1 class="intro-title">Home</h1>
 </div>
 </section>
 
-
-</div>
-</section>
 
 
 <!-- Navigation bar (appears after scrolling below motif) -->
