--- a/templates/FinalProjectData.html
+++ b/templates/FinalProjectData.html
@@ -105,7 +105,7 @@ To ensure long-term accessibility, large files are hosted on Zenodo.
 
 <ul>
   <li>
-    📦 <a href="https://doi.org/10.5281/zenodo.18175686" target="_blank">
+    📦 <a href="https://zenodo.org/records/18230736" target="_blank">
     Zenodo Dataset Archive
     </a>
   </li>
