--- a/templates/FinalProjectHome.html
+++ b/templates/FinalProjectHome.html
@@ -111,12 +111,12 @@ showing that human reflection time is not purely stochastic.
     </a>
   </li>
   <li>
-    📦 <a href="https://doi.org/10.5281/zenodo.18175686" target="_blank">
+    📦 <a href="https://zenodo.org/records/18230736" target="_blank">
     Zenodo – Datasets & archival
     </a>
   </li>
   <li>
-    📄 <a href="https://zenodo.org/records/18176553" target="_blank">
+    📄 <a href="https://zenodo.org/records/18230933" target="_blank">
     Full scientific report (PDF)
     </a>
   </li>
